Fix whitespace problem when posting review by giving exact dimensions

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -277,7 +277,7 @@ body {
     position: absolute;
     top:0; right: 0; left: 0; bottom: 0;
     width: 480px;
-    height: 80%;
+    height: 465px;
     background-color: white;
     border-radius: 16px;
     margin-top: 75px;
